[package]
name = "myqa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
dotenvy = "0.15"
log = "0.4"
mime_guess = "2"
minijinja = { version = "2.4", features = ["loader"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["compression-br"] }
tracing-subscriber = "0.3"

